--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -7,14 +7,13 @@ body {
 }
 h1 {
   font-size: 2rem;
-  letter-spacing: 1.2rem;
+  letter-spacing: 1.2em;
   text-shadow: 1px 1px 2px gray;
   border-bottom: solid 3px rgb(115, 115, 114);
 }
 .josefin-sans {
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
   font-style: normal;
 }
 .text-skyblue {
